log/build_2026-01-22_09-32-01/assignment2_rt_py/stderr.log
  File "/home/ubuntu/ros_workspace/install/assignment2_rt_py/lib/python3.12/site-packages/assignment2_rt_py/robot_controller.py", line 211
    except ValueError:
    ^^^^^^
SyntaxError: invalid syntax

